--- a/deployment/manifest.yaml
+++ b/deployment/manifest.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: bujo-tracker-config
+  name: tracker-cracker-config
   namespace: bujo-prod
   labels:
-    app: bujo_tracker
+    app: tracker-cracker
 data:
   DB_URL: "jdbc:postgresql://postgres.db/bujo"
   DB_DRIVER: "org.postgresql.Driver"
@@ -18,31 +18,31 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bujo-tracker
+  name: tracker-cracker
   namespace: bujo-prod
   labels:
-    app: bujo_tracker
+    app: tracker_cracker
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: bujo_tracker
+      app: tracker_cracker
   template:
     metadata:
       labels:
-        app: bujo_tracker
+        app: tracker_cracker
     spec:
       nodeSelector:
         host: self
       containers:
-        - name: bujo-tracker
-          image: j0rsa/bujo-tracker:latest
+        - name: tracker_cracker
+          image: j0rsa/tracker_cracker:latest
           imagePullPolicy: Always
           envFrom:
             - configMapRef:
-                name: bujo-tracker-config
+                name: tracker_cracker-config
             - secretRef:
-                name: bujo-tracker-secrets
+                name: tracker_cracker-secrets
           ports:
             - containerPort: 8080
             - containerPort: 8085
