--- a/src/main/resources/webroot/spec.yaml
+++ b/src/main/resources/webroot/spec.yaml
@@ -1,10 +1,10 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: Bujo tracker
+  title: Tracker cracker
 servers:
   - url: http://localhost:8080
-  - url: http://bujo-tracker.bujo-prod.svc.cluster.local
+  - url: http://tracker-cracker.bujo-prod.svc.cluster.local
 
 paths:
   /users:
