added kafka client

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,20 +1,24 @@
 include "default.conf"
-"app": {
-  "db": {
-    "url": ${?DB_URL},
-    "driver": ${?DB_DRIVER},
-    "user": ${?DB_USER},
-    "password": ${?DB_PASSWORD},
-    "maxPool": ${?DB_MAX_POOL}
+app {
+  db {
+    url: ${?DB_URL},
+    driver: ${?DB_DRIVER},
+    user: ${?DB_USER},
+    password: ${?DB_PASSWORD},
+    maxPool: ${?DB_MAX_POOL}
   },
-  "port": ${?APP_PORT}
-  "swagger": {
-    "enabled": ${?SWAGGER_ENABLED}
-    "port": ${?SWAGGER_PORT}
+  port: ${?APP_PORT}
+  swagger {
+    enabled: ${?SWAGGER_ENABLED}
+    port: ${?SWAGGER_PORT}
   }
-  "specPath": ${?SPEC_PATH}
+  specPath: ${?SPEC_PATH}
   redis {
     host = localhost
     host = ${?REDIS_HOST}
+  }
+  kafka {
+    brokers = "localhost:9092"
+    brokers = ${?KAFKA_BROCKERS}
   }
 }
