--- a/src/main/docker/docker-compose.yaml
+++ b/src/main/docker/docker-compose.yaml
@@ -1,5 +1,19 @@
 version: '3'
 services:
+  postgres:
+    image: postgres
+    build:
+      context: postgres
+    ports:
+      - "5432:5432"
+    command:
+      - "postgres"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+
   redis:
     image: redis:6.0.8-alpine
     ports:
