EventSyntax for publishing events to kafka EventDeserializer

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -20,5 +20,7 @@ app {
   kafka {
     brokers = "localhost:9092"
     brokers = ${?KAFKA_BROCKERS}
+    consumerGroup = ${KAFKA_CONSUMER_GROUP}
+    eventTopic = "events"
   }
 }
